# igraph.js

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  asset-manifest.json  index.html
.github/workflows/: ci.yml  page.yml
cmake/: Misc.cmake  igraph.patch
examples/page/: .eslintignore  package-lock.json  package.json
examples/page/public/: index.html
examples/page/src/: App.css  App.js  igraph.js  igraph.wasm  index.css
examples/page/src/graphs/: Famous.js  ShortestPath.js
src/: CMakeLists.txt  bind.cpp  bind.hpp  types.cpp
static/css/: main.d140aa3c.css  main.d140aa3c.css.map
static/js/: main.25630312.js  main.285269fd.js  main.2a374e45.js  main.2a374e45.js.LICENSE.txt
tests/: .gitignore  CMakeLists.txt  jest.config.js  package-lock.json  package.json  setup.js
tests/unit_tests/: center.test.js  edges.test.js  shortest.path.test.js  vertices.test.js
tools/: run-stimulus.sh
tools/stimulus/: bind.cpp.in  functions-js.yaml  types-js.yaml
